--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar main">
   <h1>Angular Blog</h1>
+  <a routerLink="/admin/login" class="login__link">Login</a>
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
